<resources>
    <string name="app_name">PagoEfectivoSDKKotlinSample</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_pagoefectivosdk">Bienvenido a PagoEfectivoSDK</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_generate_cip">GenerateCipActivity</string>
    <string name="currency">currency*</string>
    <string name="amount">amount*</string>
    <string name="transaction_code">transactionCode*</string>
    <string name="date_expiry">dateExpiry</string>
    <string name="additional_data">additionalData</string>
    <string name="payment_concept">paymentConcept</string>
    <string name="user_email">userEmail*</string>
    <string name="user_name">userName</string>
    <string name="user_last_name">userLastName</string>
    <string name="user_ubigeo">userUbigeo</string>
    <string name="user_country">userCountry</string>
    <string name="user_document_type">userDocumentType</string>
    <string name="user_document_number">userDocumentNumber</string>
    <string name="user_phone">userPhone</string>
    <string name="user_code_country">userCodeCountry</string>
    <string name="result_cip_list">resultCipList</string>
    <string name="admin_email">adminEmail</string>
    <string name="title_activity_list_cips">ListCipsActivity</string>
    <string name="generating_cip">Generando CIP</string>
    <string name="title_movil">Móvil</string>
    <string name="title_agents">Agentes</string>

    <string name="search_cips">Buscar CIPs</string>
    <string name="searching_cip">Buscando CIPs</string>
    <string name="add_row">Agregar una fila</string>

    <string name="document_dni">DNI</string>
    <string name="document_pas">Pasaporte</string>

    <string name="document_lmi">Libreta Militar</string>
    <string name="document_par">Partida de Nacimiento</string>
    <string name="document_nan">Otros</string>

    <string name="currency_pen">Soles</string>
    <string name="currency_usd">Dólares</string>
    <string name="title_activity_payment_method">Métodos de pago</string>

    <string name="pe_mobile_internet">PagoEfectivo Móvil y/o Internet</string>
    <string name="pe_agent_agencies">PagoEfectivo Agentes y Agencias</string>
    <string name="pe_visa">Visa</string>
    <string name="pe_master_card">Master Card</string>
    <string name="pe_american_express">American Express</string>
    <string name="pe_dinners_club">Dinners Club</string>
    <string name="title_activity_agents">AgentsActivity</string>

    <string name="cip_subtitle">CIP :</string>
    <string name="amount_subtitle">Monto</string>
    <string name="date_expiry_subtitle">Fecha de vencimiento</string>

    <string name="agent_bcp">BCP</string>
    <string name="agent_banbif">BANBIF</string>
    <string name="agent_bbva">BBVA</string>
    <string name="agent_scotiabank">SCOTIABANK</string>
    <string name="agent_ibk">IBK</string>
    <string name="agent_casnet">AGENTE CASNET</string>
    <string name="agent_wester">WESTERN UNION</string>
    <string name="agent_full_charge">FULL CARGA</string>
    <string name="generate_button">Generar</string>
    <string name="search_button">BuscarCips</string>
    <string name="payment_method_not_available">No disponible este método de pago</string>
    <string name="follow_this_steps_subtitle">Sigue estos pasos</string>

    <string name="title_summary_payment">Paga S/. %1$s en %2$s para reservar tu compra</string>
    <string name="step_one_for_payment">1. Ve a tu agente %1$s más cercano</string>
    <string name="step_two_for_payment">2. Indícale que harás un pago a PagoEfectivo - Código: 02186</string>
    <string name="step_three_for_payment">3. Díctale al cajero este código CIP: %1$s</string>
    <string name="agent_payment">agentPayment</string>
    <string name="transaction_code_subtitle">Transaction Code : </string>
    <string name="currency_subtitle">Currency : </string>
    <string name="status_subtitle">Status : </string>
    <string name="status_name_subtitle">Status Name : </string>
    <string name="date_creation_subtitle">Date Creation :</string>
    <string name="date_payment_subtitle">Date Payment :</string>
    <string name="date_removal_subtitle">Date removal</string>
    <string name="cip_subtitle2">Cip :</string>
    <string name="amount_subtitle2">Amount :</string>
    <string name="date_expiry_subtitle2">Date Expiry :</string>
</resources>
