<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="14dp"
    android:paddingStart="14dp"
    android:paddingEnd="14dp"
    android:paddingRight="14dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cip_subtitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lblCip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="2788542"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_subtitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lblAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text=" S/. 200"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_expiry_subtitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lblDateExpiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text=" 2017-02-14"
            android:ellipsize="end"
            android:lines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>